# Turtlector-Novatada

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  flake.nix  nixpacks.toml
backend/: .env.example  README.md  pyproject.toml  test_tts_service.py
backend/app/: main.py
backend/app/clients/: deepgram.py  gemini.py  ollama.py  texttospeech.py
backend/app/config/: settings.py
backend/app/const/: chat.py
backend/app/routers/: chat.py
backend/app/schemas/: chat.py  response.py
backend/app/services/: audio.py  chat.py  tts.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/assets/models/: MANO.glb  SALTO.glb  Standby.glb  Talking.glb  Tortuga_taws.glb  cargando.glb  tortuga.glb
frontend/src/components/: Tortuga3D.tsx
frontend/src/features/chat/: types.ts
frontend/src/features/chat/api/: chatApi.ts
frontend/src/features/chat/components/: ChatPanel.tsx
frontend/src/features/chat/hooks/: useChatFlow.ts
frontend/src/features/turtle/components/: MetaverseDecor.tsx  Scene3D.tsx  ThinkingIndicator3D.tsx  Tortuga3D.tsx  VoiceMic3D.tsx
frontend/src/features/turtle/const/: ar.ts  metaverse.ts
frontend/src/features/turtle/domain/: animations.ts  models.ts  types.ts  xr.ts
frontend/src/features/turtle/hooks/: useXRSession.ts
frontend/src/features/voice/hooks/: useAudioRecorder.ts  useBackendAudioPlayer.ts  useMicrophone.ts  useSpeechSynthesis.ts  useVoiceMode.ts
scripts/: coolify_build.sh  coolify_start.sh  dev.sh
