[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "deepgram-sdk>=7.0.0",
    "fastapi>=0.135.3",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-python-client>=2.194.0",
    "google-cloud-texttospeech>=2.36.0",
    "google-genai>=1.73.1",
    "numpy>=2.4.4",
    "ollama>=0.6.0",
    "openai>=2.31.0",
    "pydub>=0.25.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.10",
]
